# 001-langchain-pdf-fastapi-backend

./: Dockerfile  config.py  crud.py  database.py  main.py  pyproject.toml  requirements.txt  schemas.py
alembic/: env.py
config/: cloudinary_config.py
routers/: pdfs.py
