[tool.poetry]
name = "001-langchain-pdf-fastapi-backend"
version = "0.1.0"
description = ""
authors = ["julio colomer <info@aiaccelera.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
langchain = "^0.2.11"
langchain-community = "^0.2.10"
langchain-openai = "^0.1.19"
langchain-google-genai = "^1.0.2"
jupyterlab = "^4.2.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
